--- a/scratch.html
+++ b/scratch.html
@@ -27,7 +27,7 @@
             </li>
             <li>Connections to Venezuela</li>
                 <ul>
-                    <li>Beautiful People I served on my mission in Georgia <br> <img src="css/20220712_204853.jpg" alt="Elder and Friend" width="250" class="img-margin"></li>
+                    <li>Beautiful people I served on my mission in Georgia <br> <img src="css/20220712_204853.jpg" alt="Elder and Friend" width="250" class="img-margin"></li>
                     <li>My beautiful girlfriend <br> <img src="css/IMG_8082.jpeg" alt="Me and my girlfriend" width="250" class="img-margin"> </li>
                 </ul>
             <li>Fun Facts</li>
