--- a/scratch.html
+++ b/scratch.html
@@ -12,9 +12,9 @@
     <p class="white1">My Web App!<a href="Webapp.html" class="anchor-link2"> Go!</a></p>
     <p class="white1">Jump to the embedded video: <a href="#youtube-video" class="anchor-link2">Watch Now</a></p>
     <div class="content">
-        <h1>Venezeula</h1>
+        <h1>Venezuela</h1>
         <ul class="no-bullets">
-            <li>I enjoy Venezeulan culture, people, and food. Below are some of my favroite foods, my connections with the country, and some facts.</li>
+            <li>I enjoy Venezuelan culture, people, and food. Below are some of my favroite foods, my connections with the country, and some facts.</li>
         </ul>
         <ol>
             <li>
@@ -32,9 +32,9 @@
                 </ul>
             <li>Fun Facts</li>
                 <ul>
-                    <li>Venezeula has, proportionally, more federally preserved land than any other country.</li><br>
+                    <li>Venezuela has, proportionally, more federally preserved land than any other country.</li><br>
                     <li>Due to severe political issues between 1/3 and 1/4 of the country's population has emigrated to other nations.</li><br>
-                    <li>Simon Bolivar, the man responsable for liberating Venezeula, Colombia, Panama, Peru, Ecuadro, and parts of Bolivia, was born in Venezuelas capital city Caracas. </li>
+                    <li>Simon Bolivar, the man responsable for liberating Venezuela, Colombia, Panama, Peru, Ecuadro, and parts of Bolivia, was born in Venezuelas capital city Caracas. </li>
                 </ul>
         </ol>
 
@@ -50,7 +50,7 @@
 
 <!-- YouTube Video Box -->
 <div class="video-box">
-    <h2 id="youtube-video">My Favorite Song by a Venezeulan Artist</h2>
+    <h2 id="youtube-video">My Favorite Song by a Venezuelan Artist</h2>
     <div>
         <iframe width="560" height="315" 
                 src="https://www.youtube.com/embed/Q86XXD3pnnw" 
